# modular

basic/: basic.mojo
engine/: runmodel.py
hello.anote/: .dockerignore  Dockerfile  docker-compose.yaml
hello.anote/workspace/: mojoproject.toml
max/pipelines/: README.md
max_ops/: README.md  pyproject.toml
max_ops/src/max_ops/: addition.py
my-project/: README.md  pyproject.toml
my-project/src/my_project/: download-model.py  run.py
