[project]
authors = [{name = "larry", email = "xspanni@gmail.com"}]
dependencies = []
name = "max_ops"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["https://conda.modular.com/max-nightly", "https://conda.modular.com/max", "https://repo.prefix.dev/modular-community", "conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
max_ops = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
max = "~=25.1"
numpy = "<2.0"
