[project]
authors = [{name = "larry", email = "xspanni@gmail.com"}]
dependencies = []
name = "my-project"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["https://conda.modular.com/max-nightly", "pytorch", "https://conda.modular.com/max", "https://repo.prefix.dev/modular-community", "conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
my_project = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
max = "~=25.1"
pytorch = "==2.4.0"
numpy = "<2.0"
onnx = "==1.16.0"
transformers = "==4.40.1"
datasets = "==2.18"
pillow = ">=11.1.0,<12"
